CSS-fix dark mode on delete modal

--- a/apps/GABOR45/src/pages/events/EditEvents.css
+++ b/apps/GABOR45/src/pages/events/EditEvents.css
@@ -19,6 +19,10 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.delete_modal{
+    color: var(-ion-color-secondary-contrast);
+}
+
 
 .my-custom-class .close-icon {
     position: absolute;
@@ -35,7 +39,7 @@
 
 
 .my-custom-class .modal-form {
-    background-color: white;
+    background-color: var(--ion-color-secondary);
     border-radius: 10px ;
     border: 2px solid #03a852;
     padding: 10px;
